# student-chatbots-2025-11-deploy

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  delete_webhook.py  docker-compose.production.yml  docker-compose.yml  main.py  main_webhook.py  pyproject.toml
.github/workflows/: build.yml  deploy.yml  lint.yml  test.yml
alembic/: env.py
alembic/versions/: 79b3081c924c_.py  f514f5a8298e_init.py
app/: __init__.py  config.py  models.py
app/db/: __init__.py  models.py  repository.py  session.py
app/handlers/: about.py  common.py  errors.py  faq.py  form.py
app/keyboars/: inline.py  reply.py
app/middlewares/: logging.py
tests/test_app/: test_models.py
tests/test_app/test_db/: test_repository.py
tests/test_app/test_handlers/: test_about.py
