[project]
name = "echo-bot-fsm"
version = "0.1.0"
description = "Echo Bot FSM"
authors = [
    {name = "DanteOnline",email = "iamdanteonline@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "aiogram (>=3.23.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false


[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)"
]

[tool.ruff]
src = ["app"]

# Какие правила включаем
lint.select = [
    "E",   # pycodestyle (pep8)
    "F",   # pyflakes (ошибки)
    "W",   # предупреждения
    "I",   # сортировка импортов
    "B",   # bugbear (опасные конструкции)
]

exclude = [
    ".venv",
    "venv",
    "__pycache__",
]

line-length = 88

[tool.ruff.format]
quote-style = "single"
